--- a/about.html
+++ b/about.html
@@ -58,21 +58,111 @@
                 <h3>عن دكتور محمد قورة</h3>
                 <p>"دكتور محمد قورة، رائد علاج الألم التداخلي في مصر والوطن العربي، وأول من قام بإدخال تقنية الديسك فكس، المعروفة أيضًا بالمنظار المصغر لاستصئال الغضروف المنزلق بدون جراحة. وقد أثبتت هذه التقنية نسب نجاح عالية جدًا، وذلك بمنتهى الأمان وبدون الحاجة للتخدير الكلي. وقد تم توثيق وجوده في مصر والإمارات."</p>
 
-                <a href="#" class="card card-style mb-3 d-flex" data-card-height="100" style="height: 100px;">
-                    <div class="d-flex justify-content-between">
-                        <div class="ps-3 ms-1 align-self-center">
-                            <h4 class="font-600 mb-0 pt-4 mt-1">خبرة + 15</h4>
-                            <p class="color-highlight mt-n1 font-11">
-                                "تخلص من الألم بمكالمة واحدة فقط.. احجز موعدك الآن مع استشاري علاج الالم د. قورة."
-                            </p>
-                        </div>
-                    </div>
-                </a>
 
             </div>
         </div>
 
+        <div class="card card-style">
+            <div class="content mb-0 text-center">
+                <h5 class="font-18 font-600 color-highlight">آراء مرضى دكتور قورة</h5>
+                <p>آراء مرضانا عن الخدمات المقدمة لهم </p>
 
+                <div class="row">
+                    <div class="col-6">
+                        <a class="block_review" data-gallery="gallery-1" href="https://www.youtube.com/shorts/Dqzgkn_Tv7E" title="">
+                            <img src="images/empty.png" data-src="images/111.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                            <i class="fa-regular fa-circle-play fa-fade"></i>
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a class="block_review" data-gallery="gallery-1" href="https://www.youtube.com/shorts/Dqzgkn_Tv7E" title="">
+                            <img src="images/empty.png" data-src="images/222.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                            <i class="fa-regular fa-circle-play fa-fade"></i>
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a class="block_review" data-gallery="gallery-1" href="https://www.youtube.com/shorts/Dqzgkn_Tv7E" title="">
+                            <img src="images/empty.png" data-src="images/333.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                            <i class="fa-regular fa-circle-play fa-fade"></i>
+                        </a>
+                    </div>
+                    <div class="col-6">
+                        <a class="block_review" data-gallery="gallery-1" href="https://www.youtube.com/shorts/Dqzgkn_Tv7E" title="">
+                            <img src="images/empty.png" data-src="images/444.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                            <i class="fa-regular fa-circle-play fa-fade"></i>
+                        </a>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+        <div class="card card-style">
+            <div class="content mb-1">
+                <h3 class="mb-3 text-center">شاهد د.قورة من خلال الفيديوهات</h3>
+                <p class="text-center">
+                    من خلال متابعة دكتور قورة عبر وسائل التواصل الاجتماعي، يمكنك مشاهدة مقاطع فيديو لمعرفة المزيد عن مجال تدخلات الألم والأمراض.
+                </p>
+                <div class="row text-center row-cols-3 mb-0 gallery_video">
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/111.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/222.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/333.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/444.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/555.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                    <a class="col mb-4" data-gallery="gallery-1" href="https://www.youtube.com/shorts/M0-jbFrWyGk" title="">
+                        <img src="images/empty.png" data-src="images/666.jpg" class="preload-img img-fluid rounded-xs" alt="img">
+                        <i class="fa-regular fa-circle-play fa-fade"></i>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+        <div class="map_home" data-menu-height="390" data-menu-effect="menu-over" style="display: block;">
+            <h3 class="text-center font-700 mt-3">كيف تصل الينا</h3>
+            <div class="responsive-iframe max-iframe">
+                <iframe src="https://www.google.com/maps/embed/v1/view?key=AIzaSyAM3nxDVrkjyKwdIZp8QOplmBKLRVI5S_Y&amp;center=-33.8569,151.2152&amp;zoom=16&amp;maptype=satellite" frameborder="0" allowfullscreen=""></iframe>
+            </div>
+
+        </div>
+
+        <div class="footer card card-style mx-0 mb-0 pt-3">
+
+            <p class="boxed-text-l">
+                <strong> فرع القاهرة </strong>
+                <label> <i class="fa-solid fa-phone-volume"></i> +201067303035</label>
+                <label>54 تقاطع شارع البطل أحمد عبد العزيز مع جامعة الدول العربية أعلى بنك قطر الوطني - المهندسين - الجيزة</label>
+            </p>
+
+            <p class="boxed-text-l">
+                <strong> فرع دبي </strong>
+                <label> <i class="fa-solid fa-phone-volume"></i> +971501232065</label>
+                <label> مدينة دبي الطبية - المرحلة الثانية - الجداف - دبي - الإمارات العربية المتحدة</label>
+            </p>
+            <div class="text-center">
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-instagram"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-snapchat"><i class="fab fa-snapchat"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-tiktok"><i class="fab fa-tiktok"></i></a>
+            </div>
+            <p class="footer-copyright pb-3 mb-1">Copyright © seoera <span id="copyright-year">2024</span>. All Rights Reserved.</p>
+        </div>
 
     </div>
 
