--- a/gallery.html
+++ b/gallery.html
@@ -108,6 +108,36 @@
 
         </div>
 
+        <div class="map_home" data-menu-height="390" data-menu-effect="menu-over" style="display: block;">
+            <h3 class="text-center font-700 mt-3">كيف تصل الينا</h3>
+            <div class="responsive-iframe max-iframe">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d13823.91980121069!2d31.319848499999996!3d29.9800062!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2seg!4v1711289809750!5m2!1sen!2seg" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </div>
+
+        <div class="footer card card-style mx-0 mb-0 pt-3">
+
+            <p class="boxed-text-l">
+                <strong> فرع القاهرة </strong>
+                <label> <i class="fa-solid fa-phone-volume"></i> +201067303035</label>
+                <label>54 تقاطع شارع البطل أحمد عبد العزيز مع جامعة الدول العربية أعلى بنك قطر الوطني - المهندسين - الجيزة</label>
+            </p>
+
+            <p class="boxed-text-l">
+                <strong> فرع دبي </strong>
+                <label> <i class="fa-solid fa-phone-volume"></i> +971501232065</label>
+                <label> مدينة دبي الطبية - المرحلة الثانية - الجداف - دبي - الإمارات العربية المتحدة</label>
+            </p>
+            <div class="text-center">
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-facebook"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-twitter"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-instagram"><i class="fab fa-youtube"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-linkedin"><i class="fab fa-linkedin-in"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-snapchat"><i class="fab fa-snapchat"></i></a>
+                <a href="#" class="icon icon-xs mr-1 rounded-s bg-tiktok"><i class="fab fa-tiktok"></i></a>
+            </div>
+            <p class="footer-copyright pb-3 mb-1">Copyright © seoera <span id="copyright-year">2024</span>. All Rights Reserved.</p>
+        </div>
 
     </div>
 
